# parse_mediawiki_dump

./: Cargo.toml  LICENSE  readme.md
examples/: main.rs
src/: lib.rs  schema.rs
tests/: main.rs
